proxy/gluetun.Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gluetun
  name: gluetun
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gluetun
  template:
    metadata:
      labels:
        app: gluetun
    spec:
      containers:
        - name: gluetun
          image: qmcgaw/gluetun:v3.35.0
          ports:
            - name: shadowsocks-tcp
              containerPort: 8388
              protocol: TCP
            - name: shadowsocks-udp
              containerPort: 8388
              protocol: UDP
          securityContext:
            capabilities:
              add: ["NET_ADMIN", "NET_RAW", "SYS_MODULE"]
          volumeMounts:
            - mountPath: /dev/net/tun
              name: dev-net-tun
      volumes:
        - hostPath:
            path: /dev/net/tun
          name: dev-net-tun
